--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,8 +2,9 @@
     <string name="app_name">TodoListManager</string>
 
     <string name="add_item">Add Item</string>
-    <string name="delete_item">Delete Item</string>
-    <string name="action_settings">Settings</string>
+    <string name="dialog_message">msg</string>
+    <string name="dialog_title">title</string>
+    <string name="delete">Delete Item</string>
 
 
 </resources>
