--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,6 +5,11 @@
     <string name="dialog_message">msg</string>
     <string name="dialog_title">title</string>
     <string name="delete">Delete Item</string>
-
+    <string name="title_activity_add_new_todo_item">Add New Item</string>
+    <string name="delete_item">Delete Item</string>
+    <string name="action_settings">Settings</string>
+    <string name="Cancel">Cancel</string>
+    <string name="OK">OK</string>
+    <string name="call_item">Call</string>
 
 </resources>
